# TTK22_hands_on_2

./: CMakeLists.txt  main.cpp
IMC/Base/: Factory.hpp
IMC/Spec/: Blob.hpp  MsgList.hpp
